--- a/homework_06_1/homework_06_1.vcxproj.filters
+++ b/homework_06_1/homework_06_1.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Maths.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Print.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Maths.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Print.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
