--- a/homework_06_1/homework_06_1.vcxproj.filters
+++ b/homework_06_1/homework_06_1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="homework_06_1.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="Maths.cpp">
