--- a/homework_06_3/homework_06_3.vcxproj.filters
+++ b/homework_06_3/homework_06_3.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Print.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Error_define.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shape.h">
@@ -84,6 +87,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Print.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Error_define.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
