--- a/homework_06_3/homework_06_3.vcxproj
+++ b/homework_06_3/homework_06_3.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Equilateral_triangle.cpp" />
+    <ClCompile Include="Error_define.cpp" />
     <ClCompile Include="Isosceles_triangle.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Parallelogram.cpp" />
@@ -142,6 +143,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Equilateral_triangle.h" />
+    <ClInclude Include="Error_define.h" />
     <ClInclude Include="Isosceles_triangle.h" />
     <ClInclude Include="Parallelogram.h" />
     <ClInclude Include="Print.h" />
