--- a/cppl_homework_2_01/cppl_homework_2_01.vcxproj
+++ b/cppl_homework_2_01/cppl_homework_2_01.vcxproj
@@ -130,7 +130,9 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="readme.md" />
+    <None Include="readme.md">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
