--- a/cppl_homework_2_01/cppl_homework_2_01.vcxproj.filters
+++ b/cppl_homework_2_01/cppl_homework_2_01.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="readme.md">
+    <None Include="Readmy.md">
       <Filter>Файлы ресурсов</Filter>
     </None>
   </ItemGroup>
