--- a/cppl_homework_5_02/cppl_homework_5_02.vcxproj
+++ b/cppl_homework_5_02/cppl_homework_5_02.vcxproj
@@ -132,6 +132,9 @@
   <ItemGroup>
     <None Include="readme.md" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Table.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
