--- a/cppl_homework_7_03/cppl_homework_7_03.vcxproj
+++ b/cppl_homework_7_03/cppl_homework_7_03.vcxproj
@@ -132,6 +132,9 @@
   <ItemGroup>
     <ClInclude Include="Vector.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
