--- a/cppl_homework_7_03/cppl_homework_7_03.vcxproj.filters
+++ b/cppl_homework_7_03/cppl_homework_7_03.vcxproj.filters
@@ -24,4 +24,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.md">
+      <Filter>Файлы ресурсов</Filter>
+    </None>
+  </ItemGroup>
 </Project>
