--- a/sqlcpp_homework_6_01/sqlcpp_homework_6_01.vcxproj
+++ b/sqlcpp_homework_6_01/sqlcpp_homework_6_01.vcxproj
@@ -133,12 +133,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ORM.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="classesDB.h" />
-    <ClInclude Include="ORM.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
